--- a/ConferenceWL/es.lproj/Localizable.strings
+++ b/ConferenceWL/es.lproj/Localizable.strings
@@ -6,4 +6,9 @@
 
 */
 
-"Attendees" = "Los asistentes";
+"Programmes" = "Programas";
+"Attendees" = "Los Asistentes";
+"Floor Plan" = "Plano De Planta";
+"Calendar" = "Calendario";
+"Settings" = "Configuración";
+"Push Notifications" = "Empujar Notificatiobs";
