--- a/ConferenceWL/es.lproj/Localizable.strings
+++ b/ConferenceWL/es.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "Please enter password." = "Por favor, introduzca la contraseña.";
 "Please enter a name" = "Por favor, introduzca un nombre";
 "Name" = "Nombre";
+"Are you sure?" = "¿Estás seguro?";
