--- a/ConferenceWL/es.lproj/Localizable.strings
+++ b/ConferenceWL/es.lproj/Localizable.strings
@@ -22,3 +22,4 @@
 "Please enter a name" = "Por favor, introduzca un nombre";
 "Name" = "Nombre";
 "Are you sure?" = "¿Estás seguro?";
+"%d Attendees" = "%d Los Asistentes";
